--- a/config/database.yml
+++ b/config/database.yml
@@ -19,14 +19,14 @@ default: &default
 
 development:
   <<: *default
-  database: DeanzaClassRegisterApiServer_development
+  database: deanza_class_register_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: DeanzaClassRegisterApiServer_test
+  database: deanza_class_register_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: DeanzaClassRegisterApiServer_production
-  username: DeanzaClassRegisterApiServer
-  password: <%= ENV['DEANZACLASSREGISTERAPISERVER_DATABASE_PASSWORD'] %>
+  database: deanza_class_register_production
+  username: deanza_class_register
+  password: <%= ENV['deanza_class_register_DATABASE_PASSWORD'] %>
