--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -12,11 +12,11 @@
 
 common: &default_settings
   # Required license key associated with your New Relic account.
-  license_key: c8b9f68f8aa8a021f381b0ddc649b0af0a25038b
+  license_key: <%= Rails.application.credentials.new_relic_license_key %>
 
   # Your application name. Renaming here affects where data displays in New
   # Relic.  For more details, see https://docs.newrelic.com/docs/apm/new-relic-apm/maintenance/renaming-applications
-  app_name: My Application
+  app_name: deanza_class_register_production
 
   # To disable the agent regardless of other settings, uncomment the following:
   # agent_enabled: false
@@ -30,7 +30,7 @@ common: &default_settings
 # If your application has other named environments, configure them here.
 development:
   <<: *default_settings
-  app_name: My Application (Development)
+  app_name: deanza_class_register_development
 
 test:
   <<: *default_settings
@@ -39,7 +39,7 @@ test:
 
 staging:
   <<: *default_settings
-  app_name: My Application (Staging)
+  app_name: deanza_class_register_stage
 
 production:
   <<: *default_settings
